--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -51,9 +51,21 @@ body {
 
 .active-layer {
   outline: 2px solid theme("colors.primary");
-  position: relative;
 }
 
 .grid-cursor-pointer {
   cursor: pointer;
+}
+
+.ReactModal__Overlay {
+  animation: moveRight 2s ease-in-out forwards;
+}
+
+@keyframes moveRight {
+  0% {
+    right: 0;
+  }
+  100% {
+    right: calc(100% - 100px); /* Move to the right edge */
+  }
 }
